--- a/css/index.css
+++ b/css/index.css
@@ -48,21 +48,19 @@ html {
   min-height: 100vh;
 }
 
-.container {
+/* .container {
   display: flex;
   align-items: flex-end;
-}
+} */
 
 .actions {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  min-width: 24rem;
   background: var(--dark-blue);
   padding: 2.6rem 3rem;
   border-radius: 0.6rem;
   border-top-right-radius: 8rem;
-  margin-right: 2rem;
 }
 
 .actions__logo {
@@ -85,7 +83,6 @@ html {
 }
 
 .usage {
-  min-width: 34rem;
   background: var(--dark-blue);
   padding: 2.6rem 3rem;
   border-radius: 0.6rem;
@@ -135,20 +132,8 @@ html {
   color: var(--very-dark-blue);
   background: #fff;
   position: absolute;
-  right: 3rem;
-  bottom: 80%;
   padding: 0.6rem 1.2rem;
   border-radius: 0.6rem;
-}
-
-.popup::before {
-  content: '';
-  position: absolute;
-  top: calc(100% - 1rem);
-  right: 0;
-  border-top: 1rem solid transparent;
-  border-bottom: 1rem solid transparent;
-  border-right: 1rem solid #fff;
 }
 
 .popup__text {
@@ -159,4 +144,56 @@ html {
   font-size: 2rem;
   font-weight: 700;
   margin-right: 0.4rem;
+}
+
+@media screen and (min-width: 960px) {
+  .container {
+    display: flex;
+    align-items: flex-end;
+  }
+
+  .actions {
+    min-width: 24rem;
+    margin-right: 2rem;
+  }
+
+  .actions__item {
+    cursor: pointer;
+    transition: 200ms transform;
+  }
+
+  .actions__item:hover {
+    transform: scale(1.06);
+  }
+
+  .usage {
+    min-width: 34rem;
+  }
+
+  .popup {
+    right: 3rem;
+    bottom: 80%;
+  }
+
+  .popup::before {
+    content: '';
+    position: absolute;
+    top: calc(100% - 1rem);
+    right: 0;
+    border-top: 1rem solid transparent;
+    border-bottom: 1rem solid transparent;
+    border-right: 1rem solid #fff;
+  }
+}
+
+@media screen and (max-width: 929px) {
+  .actions {
+    margin-bottom: 1rem;
+  }
+
+  .popup {
+    left: 50%;
+    bottom: -24%;
+    transform: translateX(-50%);
+  }
 }
