--- a/css/index.css
+++ b/css/index.css
@@ -39,6 +39,10 @@ html {
   background-color: var(--very-dark-blue);
 }
 
+.hidden {
+  display: none;
+}
+
 .wrapper {
   display: flex;
   justify-content: center;
